[gd_scene load_steps=8 format=3 uid="uid://ibb5xmdf4h4s"]

[ext_resource type="Script" path="res://DiceTrayData/DiceStartMenu.gd" id="1_n4ex5"]
[ext_resource type="Texture2D" uid="uid://d1u2swk5mv4pn" path="res://2D6_Dungeon_Compatible_BigDice_Logo.png" id="2_fpwaa"]
[ext_resource type="Texture2D" uid="uid://cui16rtfhryd0" path="res://2D6_Dungeon_Compatible_Logo.png" id="2_nh2tl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tviu5"]
bg_color = Color(0.147672, 0.147672, 0.147672, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ysgnk"]
load_path = "res://.godot/imported/Dice.png-882c6eafe4e41c1ad8b5d2d9c8d260aa.ctex"

[sub_resource type="ImageTexture" id="ImageTexture_qky25"]

[sub_resource type="Theme" id="Theme_1glhj"]

[node name="DiceStartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n4ex5")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tviu5")

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "version"
vertical_alignment = 2

[node name="DiceTitle" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect2" type="TextureRect" parent="DiceTitle"]
custom_minimum_size = Vector2(500, 200)
layout_mode = 2
texture = ExtResource("2_nh2tl")
expand_mode = 2
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="DiceTitle"]
custom_minimum_size = Vector2(500, 175)
layout_mode = 2
texture = SubResource("CompressedTexture2D_ysgnk")
expand_mode = 2
stretch_mode = 5

[node name="FancyTitle" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 456.0
grow_horizontal = 2
texture = SubResource("ImageTexture_qky25")
expand_mode = 2
stretch_mode = 5

[node name="2d6DungeonCompatibleBigDiceLogo" type="Sprite2D" parent="FancyTitle"]
position = Vector2(255, 206)
scale = Vector2(0.45, 0.45)
texture = ExtResource("2_fpwaa")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -118.5
offset_top = -435.0
offset_right = 118.5
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme = SubResource("Theme_1glhj")
theme_override_font_sizes/font_size = 60
text = "Play"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_1glhj")
theme_override_font_sizes/font_size = 60
text = "Options"

[node name="Notes" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_1glhj")
theme_override_font_sizes/font_size = 60
text = "Legal"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_1glhj")
theme_override_font_sizes/font_size = 60
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Notes" to="." method="_on_notes_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
